welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:4: error: not found: value bteen
  bteen = (13<=b && b<=19 )
  ^loneTeen:5: error: not found: value bteen
  return ateen != bteen
                  ^